tests/golden/type_errors/array_filter_member_non_function.cd
[1].filter(42);
