tests/golden/type_errors/array_filter_member_non_function.err
Type error at 1:14: filter expects function as second argument, got number
  [1].filter(42);
               ^
